# chord-detection-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: play-wav.rs  visualize-spectrum-wav.rs  visualize-spectrum.rs  visualize-wave.rs
src/: chord_detection.rs  chromagram.rs  gromagram.rs  lib.rs  midi_notes.rs  utils.rs
