[package]
name = "chord_detection"
version = "0.1.0"
description = "Detect chords in sound"
repository = "https://github.com/shybyte/chord-detection-rust"
license = "MIT"
authors = ["shybyte@gmail.com"]

[dependencies]

[dev-dependencies]
sdl2 = { git = "https://github.com/shybyte/rust-sdl2", branch = "audio-capture-2" }