[package]
name = "chord_detection"
version = "0.1.0"
description = "Detect chords in sound"
repository = "https://github.com/shybyte/chord-detection-rust"
license = "MIT"
authors = ["shybyte@gmail.com"]

[dependencies]
rustfft = "2.0.0"
goertzel = "0.2.0"
pitch_calc = "0.11.1"
lazy_static = "1.0.0"
rusty-machine = "0.5.4"

[dev-dependencies]
sdl2 = "0.31.0"
hound = "3.3.0"
#sdl2 = { git = "https://github.com/shybyte/rust-sdl2", branch = "audio-capture-2", features=["ttf"] }


[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["ttf"]